--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "codemirror": "^5.56.0"
+    "codemirror": "^5.56.0",
+    "webpack": "^4.44.0"
   }
 }
