--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "codemirror": "^5.56.0",
+    "css-loader": "^4.0.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.44.0"
   },
   "devDependencies": {
