--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "asm80": "^1.11.14",
     "codemirror": "^5.56.0",
     "css-loader": "^4.0.0",
     "style-loader": "^1.2.1",
