--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:dev": "webpack --debug",
-    "start:dev": "webpack-dev-server"
+    "start:dev": "webpack-dev-server",
+    "opcodes:base": "z80_tables/translate_z80_tables.js z80_tables/opcodes_base.dat z80_tables/build/opcodes_base.js",
+    "opcodes:cb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_cb.dat z80_tables/build/opcodes_cb.js cb",
+    "opcodes:dd": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfd.dat z80_tables/build/opcodes_dd.js dd ix",
+    "opcodes:ed": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ed.dat z80_tables/build/opcodes_ed.js ed",
+    "opcodes:fd": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfd.dat z80_tables/build/opcodes_fd.js fd iy",
+    "opcodes:ddcb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfdcb.dat z80_tables/build/opcodes_ddcb.js ddcb ix",
+    "opcodes:fdcb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfdcb.dat z80_tables/build/opcodes_fdcb.js fdcb iy",
+    "generate:opcodes": "npm run-script opcodes:base && npm run-script opcodes:cb && npm run-script opcodes:dd && npm run-script opcodes:ed && npm run-script opcodes:fd && npm run-script opcodes:ddcb && npm run-script opcodes:fdcb"
   },
   "repository": {
     "type": "git",
