add a tool to splice the opcodes into the cpu class

--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "build": "webpack",
     "build:dev": "webpack --debug",
     "start:dev": "webpack-dev-server",
-    "opcodes:base": "z80_tables/translate_z80_tables.js z80_tables/opcodes_base.dat z80_tables/build/opcodes_base.js",
-    "opcodes:cb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_cb.dat z80_tables/build/opcodes_cb.js cb",
-    "opcodes:dd": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfd.dat z80_tables/build/opcodes_dd.js dd ix",
-    "opcodes:ed": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ed.dat z80_tables/build/opcodes_ed.js ed",
-    "opcodes:fd": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfd.dat z80_tables/build/opcodes_fd.js fd iy",
-    "opcodes:ddcb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfdcb.dat z80_tables/build/opcodes_ddcb.js ddcb ix",
-    "opcodes:fdcb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfdcb.dat z80_tables/build/opcodes_fdcb.js fdcb iy",
-    "generate:opcodes": "npm run-script opcodes:base && npm run-script opcodes:cb && npm run-script opcodes:dd && npm run-script opcodes:ed && npm run-script opcodes:fd && npm run-script opcodes:ddcb && npm run-script opcodes:fdcb"
+    "opcodes:base": "z80_tables/translate_z80_tables.js z80_tables/opcodes_base.dat z80_tables/build/00_opcodes_base.js",
+    "opcodes:cb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_cb.dat z80_tables/build/01_opcodes_cb.js cb",
+    "opcodes:dd": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfd.dat z80_tables/build/02_opcodes_dd.js dd ix",
+    "opcodes:ed": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ed.dat z80_tables/build/03_opcodes_ed.js ed",
+    "opcodes:fd": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfd.dat z80_tables/build/04_opcodes_fd.js fd iy",
+    "opcodes:ddcb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfdcb.dat z80_tables/build/05_opcodes_ddcb.js ddcb ix",
+    "opcodes:fdcb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfdcb.dat z80_tables/build/06_opcodes_fdcb.js fdcb iy",
+    "generate:opcodes": "npm run-script opcodes:base && npm run-script opcodes:cb && npm run-script opcodes:dd && npm run-script opcodes:ed && npm run-script opcodes:fd && npm run-script opcodes:ddcb && npm run-script opcodes:fdcb && npm run-script opcodes:combine",
+    "opcodes:combine": "ls z80_tables/build/[0-9]* | sort | xargs cat > z80_tables/build/opcodes.js",
+    "opcodes:splice": "z80_tables/inject_file.js src/frontend/cpu/z80.js z80_tables/build/opcodes.js '// START: this block is AUTOMATICALLY GENERATED SEE /z80_tables/*' '// END: this block is AUTOMATICALLY GENERATED SEE /z80_tables/*'"
   },
   "repository": {
     "type": "git",
