--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "angular": "^1.8.1",
+    "angular-sanitize": "^1.8.1",
     "asm80": "^1.11.14",
+    "babel-loader": "^8.1.0",
     "codemirror": "^5.58.1",
     "css-loader": "^4.3.0",
     "style-loader": "^1.3.0",
