--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.1",
   "description": "an ide for writing, running and debugging z80 asm on the web",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:dev": "webpack --debug",
-    "start:dev": "webpack-dev-server",
+    "start:dev": "webpack serve",
     "opcodes:base": "z80_tables/translate_z80_tables.js z80_tables/opcodes_base.dat z80_tables/build/00_opcodes_base.js",
     "opcodes:cb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_cb.dat z80_tables/build/01_opcodes_cb.js cb",
     "opcodes:dd": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfd.dat z80_tables/build/02_opcodes_dd.js dd ix",
@@ -29,19 +30,19 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "angular": "^1.8.1",
-    "angular-sanitize": "^1.8.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "angular": "^1.8.2",
+    "angular-sanitize": "^1.8.2",
     "asm80": "^1.11.14",
     "babel-loader": "^8.1.0",
-    "codemirror": "^5.58.1",
+    "codemirror": "^5.58.2",
     "css-loader": "^4.3.0",
     "style-loader": "^1.3.0",
-    "webpack": "^4.44.2"
+    "webpack": "^5.3.2"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
