--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:dev": "webpack --debug",
+    "start": "node ./bin/www.js",
     "start:dev": "webpack serve",
     "opcodes:base": "z80_tables/translate_z80_tables.js z80_tables/opcodes_base.dat z80_tables/build/00_opcodes_base.js",
     "opcodes:cb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_cb.dat z80_tables/build/01_opcodes_cb.js cb",
@@ -37,7 +38,12 @@
     "asm80": "^1.11.14",
     "babel-loader": "^8.1.0",
     "codemirror": "^5.58.2",
+    "cookie-parser": "^1.4.5",
     "css-loader": "^4.3.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0",
     "style-loader": "^1.3.0",
     "webpack": "^5.3.2"
   },
