--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "codemirror": "^5.58.2",
     "cookie-parser": "^1.4.5",
     "css-loader": "^4.3.0",
+    "debug": "^4.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
