--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
+    "nrf-intel-hex": "^1.3.0",
     "style-loader": "^1.3.0",
     "webpack": "^5.3.2"
   },
