--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "angular-sanitize": "^1.8.2",
     "asm80": "^1.11.14",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.3",
     "codemirror": "^5.58.2",
     "cookie-parser": "^1.4.5",
     "css-loader": "^4.3.0",
@@ -50,6 +51,7 @@
     "morgan": "^1.10.0",
     "nrf-intel-hex": "^1.3.0",
     "style-loader": "^1.3.0",
+    "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.3.2"
   },
   "devDependencies": {
