--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
   "scripts": {
     "build": "NODE_ENV=production webpack",
     "start": "NODE_ENV=production node ./bin/www.js",
-
     "build:dev": "NODE_ENV=development webpack",
     "start:dev": "NODE_ENV=development webpack serve",
-
     "generate:opcodes": "npm run-script opcodes:base && npm run-script opcodes:cb && npm run-script opcodes:dd && npm run-script opcodes:ed && npm run-script opcodes:fd && npm run-script opcodes:ddcb && npm run-script opcodes:fdcb && npm run-script opcodes:combine",
     "opcodes:base": "z80_tables/translate_z80_tables.js z80_tables/opcodes_base.dat z80_tables/build/00_opcodes_base.js",
     "opcodes:cb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_cb.dat z80_tables/build/01_opcodes_cb.js cb",
@@ -21,7 +19,6 @@
     "opcodes:fdcb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfdcb.dat z80_tables/build/06_opcodes_fdcb.js fdcb iy",
     "opcodes:combine": "ls z80_tables/build/[0-9]* | sort | xargs cat > z80_tables/build/opcodes.js",
     "opcodes:splice": "z80_tables/inject_file.js src/frontend/cpu/z80.js z80_tables/build/opcodes.js '// START: this block is AUTOMATICALLY GENERATED SEE /z80_tables/*' '// END: this block is AUTOMATICALLY GENERATED SEE /z80_tables/*'",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -48,8 +45,10 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "jquery": "^3.5.1",
     "morgan": "^1.10.0",
     "nrf-intel-hex": "^1.3.0",
+    "popper.js": "^1.16.1",
     "style-loader": "^1.3.0",
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.3.2"
