--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "jquery": "^3.5.1",
+    "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
     "nrf-intel-hex": "^1.3.0",
     "popper.js": "^1.16.1",
