--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "NODE_ENV=production webpack",
     "start": "NODE_ENV=production node ./bin/www.js",
     "build:dev": "NODE_ENV=development webpack",
-    "start:dev": "NODE_ENV=development webpack serve",
+    "start:dev-fe": "NODE_ENV=development webpack serve",
+    "start:dev-be": "NODE_ENV=development nodemon ./bin/www.js",
     "generate:opcodes": "rm -fv z80_tables/build/*.js && npm run-script opcodes:base && npm run-script opcodes:cb && npm run-script opcodes:dd && npm run-script opcodes:ed && npm run-script opcodes:errata_ed && npm run-script opcodes:fd && npm run-script opcodes:ddcb && npm run-script opcodes:fdcb && npm run-script opcodes:combine",
     "opcodes:base": "z80_tables/translate_z80_tables.js z80_tables/opcodes_base.dat z80_tables/build/00_opcodes_base.js",
     "opcodes:cb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_cb.dat z80_tables/build/01_opcodes_cb.js cb",
@@ -54,10 +55,11 @@
     "popper.js": "^1.16.1",
     "style-loader": "^1.3.0",
     "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.3.2"
+    "webpack": "^5.3.2",
+    "webpack-cli": "^4.1.0"
   },
   "devDependencies": {
-    "webpack-cli": "^4.1.0",
+    "nodemon": "^2.0.6",
     "webpack-dev-server": "^3.11.0"
   }
 }
