--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "angular": "^1.8.2",
     "angular-sanitize": "^1.8.2",
     "babel-loader": "^8.1.0",
+    "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "codemirror": "^5.58.2",
     "cookie-parser": "^1.4.5",
@@ -55,6 +56,7 @@
     "popper.js": "^1.16.1",
     "style-loader": "^1.3.0",
     "terser-webpack-plugin": "^5.0.3",
+    "uuid": "^8.3.1",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0"
   },
