--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
   - npm install
 
 script:
-  - NODE_ENV=development npm run build
-  - NODE_ENV=production npm run build
+  - npm run build:dev
+  - npm run build
