--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "opcodes:fdcb": "z80_tables/translate_z80_tables.js z80_tables/opcodes_ddfdcb.dat z80_tables/build/07_opcodes_fdcb.js fdcb iy",
     "opcodes:combine": "ls z80_tables/build/[0-9]* | sort | xargs cat > z80_tables/build/opcodes.js",
     "opcodes:splice": "z80_tables/inject_file.js src/frontend/cpu/z80.js z80_tables/build/opcodes.js '// START: this block is AUTOMATICALLY GENERATED SEE /z80_tables/*' '// END: this block is AUTOMATICALLY GENERATED SEE /z80_tables/*'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest"
   },
   "repository": {
     "type": "git",
@@ -61,6 +61,7 @@
     "webpack-cli": "^4.1.0"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "webpack-dev-server": "^3.11.0"
   }
